--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
+    "api": "workspace:*",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "api": "workspace:*",
+    "react-router-dom": "^7.12.0",
     "shared": "workspace:*",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
