feat: add create-honolulu CLI with interactive prompts
- Interactive CLI with @clack/prompts
- Workspace selection (API/Web/Shared)
- Package manager choice
- Git initialization option
- Dependency installation option

--- a/packages/create-honolulu/template/package.json
+++ b/packages/create-honolulu/template/package.json
@@ -9,8 +9,7 @@
 	"workspaces": [
 		"./api",
 		"./web",
-		"./shared",
-		"./packages/create-honolulu"
+		"./shared"
 	],
 	"scripts": {
 		"dev": "turbo dev",
