--- a/packages/create-honolulu/template/apps/api/package.json
+++ b/packages/create-honolulu/template/apps/api/package.json
@@ -5,7 +5,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "bun --watch run src/index.ts"
+    "dev": "bun --watch run src/index.ts",
+    "lint": "biome check .",
+    "format": "biome check --write ."
   },
   "dependencies": {
     "@hono/valibot-validator": "^0.6.1",
@@ -17,6 +19,7 @@
     "valibot": "^1.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest"
   }
 }
