--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 	],
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"api": "workspace:*",
 		"bun-types": "latest",
+		"drizzle-kit": "^0.31.8",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
 		"turbo": "^2.6.3",
