--- a/packages/create-honolulu/template/apps/api/package.json
+++ b/packages/create-honolulu/template/apps/api/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.30.1"
   }
 }
