--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	],
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
+		"@changesets/cli": "^2.29.8",
 		"api": "workspace:*",
 		"bun-types": "latest",
 		"drizzle-kit": "^0.31.8",
