migrating to using ink cli

--- a/packages/create-honolulu/tsconfig.json
+++ b/packages/create-honolulu/tsconfig.json
@@ -5,7 +5,10 @@
         "rootDir": "./src",
         "module": "ESNext",
         "target": "ESNext",
-        "moduleResolution": "bundler"
+        "moduleResolution": "bundler",
+        "jsx": "react",
+        "jsxFactory": "React.createElement",
+        "jsxFragmentFactory": "React.Fragment"
     },
     "include": [
         "src/**/*"
