--- a/packages/create-honolulu/package.json
+++ b/packages/create-honolulu/package.json
@@ -11,12 +11,18 @@
         "template"
     ],
     "scripts": {
-        "build": "bun build src/index.ts --outdir dist --target node --format esm",
+        "build": "tsc && echo '#!/usr/bin/env node' | cat - dist/index.js > dist/index.tmp.js && mv dist/index.tmp.js dist/index.js && chmod +x dist/index.js",
         "dev": "bun run src/index.ts"
     },
     "dependencies": {
-        "@clack/prompts": "^0.8.2",
-        "picocolors": "^1.1.1"
+        "ink": "^6.6.0",
+        "react": "^19.0.0",
+        "ink-text-input": "^6.0.0",
+        "ink-spinner": "^5.0.0",
+        "ink-select-input": "^6.0.0",
+        "ink-gradient": "^3.0.0",
+        "ink-big-text": "^2.0.0",
+        "chalk": "^5.4.1"
     },
     "devDependencies": {
         "@types/node": "^22.19.2",
