--- a/packages/create-honolulu/template/apps/api/package.json
+++ b/packages/create-honolulu/template/apps/api/package.json
@@ -7,13 +7,19 @@
     "build": "tsc",
     "dev": "bun --watch run src/index.ts",
     "lint": "biome check .",
-    "format": "biome check --write ."
+    "format": "biome check --write .",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "seed": "bun run src/scripts/seed.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hono/valibot-validator": "^0.6.1",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.10.8",
-    "hono-pino": "^0.10.3",
     "postgres": "^3.4.8",
     "shared": "workspace:*",
     "valibot": "^1.2.0"
@@ -21,6 +27,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.30.1"
+    "drizzle-kit": "^0.30.1",
+    "vitest": "^2.0.0"
   }
 }
