--- a/packages/create-honolulu/package.json
+++ b/packages/create-honolulu/package.json
@@ -11,8 +11,8 @@
         "template"
     ],
     "scripts": {
-        "build": "tsc && echo '#!/usr/bin/env node' | cat - dist/index.js > dist/index.tmp.js && mv dist/index.tmp.js dist/index.js && chmod +x dist/index.js",
-        "dev": "bun run src/index.ts"
+        "build": "bun build src/index.tsx --outdir dist --target node && echo '#!/usr/bin/env node' | cat - dist/index.js > dist/index.tmp.js && mv dist/index.tmp.js dist/index.js && chmod +x dist/index.js",
+        "dev": "bun run src/index.tsx"
     },
     "dependencies": {
         "ink": "^6.6.0",
@@ -26,6 +26,7 @@
     },
     "devDependencies": {
         "@types/node": "^22.19.2",
+        "react-devtools-core": "^7.0.1",
         "typescript": "~5.7.3"
     },
     "keywords": [
