--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "api": "workspace:*",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
