--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
     "shared": "workspace:*",
     "tailwind-merge": "^3.4.0",
