--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.16",
     "api": "workspace:*",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.562.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.2.3",
