--- a/packages/create-honolulu/template/packages/shared/package.json
+++ b/packages/create-honolulu/template/packages/shared/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "shared",
-  "version": "0.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
-  },
-  "devDependencies": {
-    "typescript": "^5.9.3"
-  }
+    "name": "shared",
+    "version": "0.0.1",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "scripts": {
+        "build": "tsc",
+        "dev": "tsc --watch"
+    },
+    "dependencies": {
+        "valibot": "^1.2.0"
+    },
+    "devDependencies": {
+        "typescript": "^5.9.3"
+    }
 }
