--- a/shared/package.json
+++ b/shared/package.json
@@ -7,6 +7,9 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
+  "dependencies": {
+    "valibot": "^1.0.0"
+  },
   "devDependencies": {
     "typescript": "^5.9.3"
   }
