chores tspath shared

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "baseUrl": ".",
     "paths": {
       "shared": [
-        "shared/src/index.ts"
+        "shared/dist/index.d.ts"
       ],
       "@api/*": [
         "api/src/*"
