--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,7 +5,13 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "composite": true
+    "composite": true,
+    "baseUrl": "..",
+    "paths": {
+      "shared": [
+        "shared/dist"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
