--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,13 +5,7 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "composite": true,
-    "baseUrl": "..",
-    "paths": {
-      "shared": [
-        "shared/dist"
-      ]
-    }
+    "composite": true
   },
   "include": [
     "src/**/*.ts"
