--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,7 @@ jobs:
           bun-version: latest
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile --ignore-scripts
-
-      - name: Build Shared Package
-        run: bun run build --filter=shared
+        run: bun install --frozen-lockfile
 
       - name: Lint
         run: bun run lint
