--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Build Shared
+        run: cd shared && bun run build
+
+      - name: Build API
+        run: cd api && bun run build
+
       - name: Lint
         run: bun run lint
 
@@ -31,5 +37,5 @@ jobs:
       - name: Test
         run: bun run test
 
-      - name: Build
+      - name: Build All
         run: bun run build
