--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,7 +5,15 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "composite": true
+    "composite": true,
+    "paths": {
+      "shared": [
+        "../shared/dist/index.d.ts"
+      ],
+      "@api/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
