--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -4,7 +4,15 @@
     "rootDir": ".",
     "outDir": "dist",
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
+    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json",
+    "paths": {
+      "shared": [
+        "../shared/dist/index.d.ts"
+      ],
+      "@web/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts",
