--- a/renovate.json
+++ b/renovate.json
@@ -1,17 +1,13 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "config:best-practices"
-    ],
-    "packageRules": [
-        {
-            "matchPackagePatterns": [
-                "*"
-            ],
-            "groupName": "all dependencies"
-        }
-    ],
-    "lockFileMaintenance": {
-        "enabled": true
-    }
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": ["config:best-practices"],
+	"packageRules": [
+		{
+			"matchPackagePatterns": ["*"],
+			"groupName": "all dependencies"
+		}
+	],
+	"lockFileMaintenance": {
+		"enabled": true
+	}
 }
