--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,30 +1,21 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "paths": {
-      "shared": [
-        "../shared/dist/index.d.ts"
-      ],
-      "@api/*": [
-        "./src/*"
-      ]
-    }
-  },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "references": [
-    {
-      "path": "../shared"
-    }
-  ]
+	"extends": "../tsconfig.json",
+	"compilerOptions": {
+		"rootDir": "src",
+		"outDir": "dist",
+		"declaration": true,
+		"declarationMap": true,
+		"composite": true,
+		"paths": {
+			"shared": ["../shared/dist/index.d.ts"],
+			"@api/*": ["./src/*"]
+		}
+	},
+	"include": ["src/**/*.ts"],
+	"exclude": ["node_modules", "dist"],
+	"references": [
+		{
+			"path": "../shared"
+		}
+	]
 }
