--- a/packages/create-honolulu/template/biome.json
+++ b/packages/create-honolulu/template/biome.json
@@ -1,5 +1,6 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+    "root": false,
+    "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
     "vcs": {
         "enabled": true,
         "clientKind": "git",
