--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,61 +1,49 @@
 {
-  "compilerOptions": {
-    // Environment setup & latest features
-    "lib": [
-      "ESNext",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-    // Module resolution
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "verbatimModuleSyntax": true,
-    "resolveJsonModule": true,
-    // Strictness and best practices
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    // Speed optimizations
-    "skipLibCheck": true,
-    "incremental": true,
-    "composite": true,
-    // Path aliases for DX
-    "baseUrl": ".",
-    "paths": {
-      "shared": [
-        "shared/dist/index.d.ts"
-      ],
-      "@api/*": [
-        "api/src/*"
-      ],
-      "@web/*": [
-        "web/src/*"
-      ],
-      "@shared/*": [
-        "shared/src/*"
-      ]
-    },
-    // Optional strict flags (disabled by default for DX)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  },
-  "references": [
-    {
-      "path": "./shared"
-    },
-    {
-      "path": "./api"
-    },
-    {
-      "path": "./web"
-    }
-  ]
+	"compilerOptions": {
+		// Environment setup & latest features
+		"lib": ["ESNext", "DOM", "DOM.Iterable"],
+		"target": "ESNext",
+		"module": "ESNext",
+		"moduleDetection": "force",
+		"jsx": "react-jsx",
+		"allowJs": true,
+		// Module resolution
+		"moduleResolution": "bundler",
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"verbatimModuleSyntax": true,
+		"resolveJsonModule": true,
+		// Strictness and best practices
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
+		// Speed optimizations
+		"skipLibCheck": true,
+		"incremental": true,
+		"composite": true,
+		// Path aliases for DX
+		"baseUrl": ".",
+		"paths": {
+			"shared": ["shared/dist/index.d.ts"],
+			"@api/*": ["api/src/*"],
+			"@web/*": ["web/src/*"],
+			"@shared/*": ["shared/src/*"]
+		},
+		// Optional strict flags (disabled by default for DX)
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"noPropertyAccessFromIndexSignature": false
+	},
+	"references": [
+		{
+			"path": "./shared"
+		},
+		{
+			"path": "./api"
+		},
+		{
+			"path": "./web"
+		}
+	]
 }
