--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,34 +1,23 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "dist",
-    "composite": true,
-    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json",
-    "paths": {
-      "shared": [
-        "../shared/dist/index.d.ts"
-      ],
-      "@web/*": [
-        "./src/*"
-      ]
-    }
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "vite.config.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "references": [
-    {
-      "path": "../shared"
-    },
-    {
-      "path": "../api"
-    }
-  ]
+	"extends": "../tsconfig.json",
+	"compilerOptions": {
+		"rootDir": ".",
+		"outDir": "dist",
+		"composite": true,
+		"tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json",
+		"paths": {
+			"shared": ["../shared/dist/index.d.ts"],
+			"@web/*": ["./src/*"]
+		}
+	},
+	"include": ["src/**/*.ts", "src/**/*.tsx", "vite.config.ts"],
+	"exclude": ["node_modules", "dist"],
+	"references": [
+		{
+			"path": "../shared"
+		},
+		{
+			"path": "../api"
+		}
+	]
 }
