--- a/packages/create-honolulu/template/apps/api/tsconfig.json
+++ b/packages/create-honolulu/template/apps/api/tsconfig.json
@@ -5,7 +5,11 @@
         "outDir": "dist",
         "declaration": true,
         "declarationMap": true,
-        "composite": true
+        "composite": true,
+        "paths": {
+            "shared": ["../../packages/shared/dist/index.d.ts"],
+            "@api/*": ["./src/*"]
+        }
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"],
