--- a/packages/create-honolulu/template/apps/web/tsconfig.json
+++ b/packages/create-honolulu/template/apps/web/tsconfig.json
@@ -4,7 +4,11 @@
         "rootDir": ".",
         "outDir": "dist",
         "composite": true,
-        "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json"
+        "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo.json",
+        "paths": {
+            "shared": ["../../packages/shared/dist/index.d.ts"],
+            "@web/*": ["./src/*"]
+        }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx", "vite.config.ts"],
     "exclude": ["node_modules", "dist"],
