--- a/packages/create-honolulu/template/biome.json
+++ b/packages/create-honolulu/template/biome.json
@@ -1,5 +1,4 @@
 {
-    "root": false,
     "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
     "vcs": {
         "enabled": true,
@@ -16,6 +15,13 @@
         "indentWidth": 4,
         "lineWidth": 100
     },
+    "assist": {
+        "actions": {
+            "source": {
+                "organizeImports": "on"
+            }
+        }
+    },
     "linter": {
         "enabled": true,
         "rules": {
@@ -28,6 +34,12 @@
     "javascript": {
         "formatter": {
             "quoteStyle": "double"
+        }
+    },
+    "css": {
+        "parser": {
+            "cssModules": true,
+            "tailwindDirectives": true
         }
     }
 }
