--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/node_modules", "!**/dist", "!**/.turbo"]
+		"includes": [
+			"**",
+			"!**/node_modules",
+			"!**/dist",
+			"!**/.turbo",
+			"!packages/create-honolulu/template"
+		]
 	},
 	"formatter": {
 		"enabled": true,
