--- a/packages/create-honolulu/tsconfig.json
+++ b/packages/create-honolulu/tsconfig.json
@@ -6,9 +6,10 @@
 		"module": "ESNext",
 		"target": "ESNext",
 		"moduleResolution": "bundler",
-		"jsx": "react",
-		"jsxFactory": "React.createElement",
-		"jsxFragmentFactory": "React.Fragment"
+		"moduleResolution": "bundler",
+		"jsx": "react-jsx"
 	},
-	"include": ["src/**/*"]
+	"include": [
+		"src/**/*"
+	]
 }
