--- a/packages/create-honolulu/tsconfig.json
+++ b/packages/create-honolulu/tsconfig.json
@@ -6,10 +6,7 @@
 		"module": "ESNext",
 		"target": "ESNext",
 		"moduleResolution": "bundler",
-		"moduleResolution": "bundler",
 		"jsx": "react-jsx"
 	},
-	"include": [
-		"src/**/*"
-	]
+	"include": ["src/**/*"]
 }
